--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,7 +25,7 @@
 
 
 
-:root {
+html {
 	font-size: 100%;
 	/* 10px */
 	/* parallax */
@@ -42,6 +42,7 @@
 body {
 	font-family: Muli, sans-serif;
 	color: #fff;
+	
 
 	/* parallax */
 
