--- a/src/assets/scss/components/_burger-active.scss
+++ b/src/assets/scss/components/_burger-active.scss
@@ -14,13 +14,13 @@
 @media only screen and (max-width: 1368px) {
 	div.header__navigation._active {
 		@include pos ($l: 0);
-		@include transition (all 0.2s ease-in-out);
+		@include transition (all, 0.2s, ease-in-out);
 
 	}
 
 	._active+.header__burger-btn .header__burger-line::after {
 		@include transform (rotate(90deg), translate(10px, 0));
-		}
+	}
 
 	._active+.header__burger-btn .header__burger-line {
 		@include box-size ($w: 40px);
@@ -30,5 +30,5 @@
 
 	._active+.header__burger-btn .header__burger-line::before {
 		@include transform (scale(0));
-		}
+	}
 }
