--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 	@include font ($fs: 1.3125rem, $lh: 1.05em, $fw: 800);
 
 	&:hover::before {
-		@include transition (all 0.2s ease-in-out);
+		@include transition (all, 0.2s, ease-in-out);
 		@include transform (translateX(10px));
 	}
 
