--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -60,7 +60,7 @@
 
 		&::before {
 			@include pseudo;
-			@include pos ($t: 22px, $l: 22px);
+			@include pos-abs ($t: 22px, $l: 22px);
 			@include box-size (24px, 19px);
 			@include background (url("../images/email.png"));
 		}
@@ -94,7 +94,7 @@
 
 		&::before {
 			@include pseudo;
-			@include pos ($b: 7px, $l: -7px);
+			@include pos-abs ($b: 7px, $l: -7px);
 			@include background (url("../images/arrow_footer.png"));
 			@include box-size (48px, 42px);
 		}
@@ -122,13 +122,13 @@
 		@include box-size (53px, 55px);
 		@include pos-fix ($b: 80px, $r: 80px);
 		z-index: 100;
-		@include background (url(../images/arrow__up.png));
+		@include background (url(../images/footer/footer_arrow__up.png));
 		background-size: 14px 25px;
 		@include border-radius-px (5);
 
 		&::before {
 			@include pseudo ('Go top');
-			@include pos ($t: 40px, $r: 60px);
+			@include pos-abs ($t: 40px, $r: 60px);
 			@include font ($fs: 1rem, $lh: 2.5em, $ls: -0.02em, $fw: 700);
 			@include box-size (55px, 14px);
 		}
@@ -287,8 +287,8 @@
 
 			&::before {
 				@include pseudo;
-				@include pos ($b: -2px, $l: -55px);
-				@include background (url("../images/arrow_footer.png"));
+				@include pos-abs ($b: -2px, $l: -55px);
+				@include background (url("../images/footer/footer_arrow.png"));
 				@include box-size (48px, 42px);
 			}
 
