--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -61,7 +61,7 @@
 			@include pseudo;
 			@include pos-abs ($t: 27px, $l: 210px);
 			@include box-size ($w: 30px, $h: 16px);
-			@include background (url('../images/base/arrow.jpg'));
+			@include background (url('../images/base/arrow.png'));
 
 		}
 	}
@@ -89,18 +89,18 @@
 			&::after,
 			&::before {
 				@include pseudo;
-				@include pos-px ($r: 0);
+				@include pos-abs ($r: 0);
 				background-color: $bg-burger-color;
 				@include box-size (35px, 2px);
 			}
 
 			&::after {
-				@include pos-px (-10, 0, 0, 0);
+				@include pos-abs (-10px, 0, 0, 0);
 				@include box-size ($w: 40px)
 			}
 
 			&::before {
-				@include pos-px (10, 0, 0, 0);
+				@include pos-abs (10px, 0, 0, 0);
 				@include box-size ($w: 30px);
 			}
 		}
