--- a/src/assets/scss/layout/_story.scss
+++ b/src/assets/scss/layout/_story.scss
@@ -1,86 +1,49 @@
 .story {
 	&__inner {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-
-		margin: 120px auto 152px;
-		/* 120px auto 152px */
-		max-width: 1320px;
-		/* 1320px */
-
+		@include flex (center, center);
+		@include mar (120px, auto, 152px, auto);
+		max-width: 1320px;}
 
 		&__image {
 			max-width: 584px;
-			/* 584px */
 		}
 
 		&__title {
-			margin-bottom: 43px;
-			/* 43px */
+			@include mar (0, 0, 43px, 0);
 		}
 
 		&__text {
-			margin-bottom: 45px;
-			/* 45px */
+			@include mar (0, 0, 45px, 0);
 			max-width: 525px;
 		}
 
 		&__btn {
-			width: 304px;
-			/* 304px */
-			height: 64px;
-			/* 64px */
-
+			@include box-size (304px, 64px);
+			@include border-radius-px (30);
 			border: none;
-			border-radius: 30px;
-			-webkit-border-radius: 30px;
-			-moz-border-radius: 30px;
-			-ms-border-radius: 30px;
-			-o-border-radius: 30px;
-
 			text-indent: -126px;
-			/* 126px */
-
 			position: relative;
 
 			&::before {
-				content: "";
-	
-				position: absolute;
-				top: 20px;
-				/* 20px */
-				left: 225px;
-				/* 225px */
-				width: 30px;
-				/* 30px */
-				height: 16px;
-				/* 16px */
-	
-				background: no-repeat center/cover url("../images/arrow.png");
+				@include pseudo;
+				@include pos-abs ($t: 20px, $l: 225px);
+				@include box-size (30px, 16px);
+				@include background (url("../images/base/arrow.png"))
 			}
 		}
 
 		&__content {
 			position: relative;
+			@include mar (0, 0, 0, 200px);
 
-			margin-left: 200px;
-			/* 200px */
 			&::after {
-				content: "";
-				position: absolute;
-				display: block;
-				top: 24px;
-				/* 24px */
-				left: -166px;
-				/* -166px */
-				width: 290px;
-				/* 290px */
-				height: 216px;
-				/* 216px */
-				background: no-repeat center/cover url("../images/stamp.png");
+				@include pseudo;
+				@include pos-abs ($t: 24px, $l: -166px);
+				@include box-size (290px, 216px);
+				@include background (url("../images/story/story_stamp.png"));
 			}
 		}
+
 		/* story */
 		@media only screen and (max-width: 1440px) {}
 
@@ -88,77 +51,61 @@
 
 		@media only screen and (max-width: 768px) {
 			&__inner {
-				justify-content: flex-start;
-				flex-wrap: wrap;
-				margin: 90px auto 152px;
-				/* 90px auto 152px */
+				@include flex (flex-start, center, wrap);
+				@include mar (90px, auto, 152px, auto);
 			}
 
 			&__box {
-				padding-left: 34px;
-				/* 34px */
+				@include pad (0, 0, 0, 34px);
 			}
 
 			&__title {
-				margin-bottom: 43px;
-				/* 43px */
+				@include mar (0, 0, 43px, 0);
 			}
 
 			&__text {
+				@include mar (0, 0, 40px, 0);
 				max-width: 520px;
 				/* 520px */
-
-				margin-bottom: 40px;
-				/* 40px */
 			}
 
 			&__btn {
-				margin-bottom: 80px;
-				/* 80px */
+				@include mar (0, 0, 80px, 0);
+
 			}
 
 			&__content {
-				margin-left: 160px;
-				/* 160px */
+				@include mar (0, 0, 0, 160px);
 			}
 		}
 
 		@media only screen and (max-width: 360px) {
 			&__inner {
-				margin: 60px auto 152px;
-				/* 60px auto 152px */
+				@include mar (60px, auto, 152px, auto);
 			}
 
 			&__box {
-				padding-left: 11px;
-				/* 16px */
+				@include pad (0, 0, 0, 16px);
 			}
 
 			&__title {
-				margin-bottom: 32px;
-				/* 32px */
+				@include mar (0, 0, 32px, 0);
 			}
 
 			&__btn {
-				margin-left: 17px;
+				@include mar (0, 0, 0, 17px);
 			}
 
 			&__img {
-				width: 340px;
-				/* 340px */
-				height: 350px;
-				/* 350px */
+				@include box-size (340px, 350px);
 			}
 
 			&__content {
-				margin: 0 auto;
-				/* 200px */
+				@include mar (0, auto, 0, auto);
+
 				&::after {
 					display: none;
 				}
 			}
-
-			
 		}
 	}
-}
