--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,33 +1,46 @@
 .footer {
+	
 	&__top {
 		background-color: $bg-footer-color;
-		@include pad (77px, 0, 93px, 0);
+		@include pad (80px, 0, 93px, 0);
+		
+		
+		
 	}
 
 	&__wrapper {
-		@include flex ($jc: space-between);
-	}
+		@include flex (space-between, center, wrap);
+		// @include mar (25px, 0, 50px, 0);
+		}
 
 	&__logo {
-		@include mar (54px, 0, 74px, 100px);
+		@include mar (0, 195px, 40px, 0);
+	
 	}
 
 	&__wrap {
-		@include flex ();
+		@include flex (center, center, wrap);
+		@include mar (0, 38px, 0, 0);
+		max-width: 590px;
+
+		@media only screen and (max-width: 1488px) {
+			@include flex (center, center, wrap, column);
+		}
+		
 	}
 
 	&__info {
-		@include mar (0, 0, 294px, 0);
+		@include mar (0, 0, 15px, 0);
 	}
 
 	&__title {
 		font-size: 1.625rem;
 		/* 26px */
-		@include mar (0, 0, 35px, 0);
+		@include mar (0, 0, 30px, 0);
 	}
 
 	&__info-list {
-		@include box-size ($w: 165px);
+		@include box-size ($w: 170px);
 	}
 
 	&__info-link {
@@ -36,7 +49,11 @@
 	}
 
 	&__pay {
-		@include mar (0, 0, 0, 152px);
+		@include mar (0, 0, 0, 144px);
+		@media only screen and (max-width: 1552px) {
+			@include mar (0, 0, 0, 95px);
+		}
+		
 	}
 
 	&__pay-list {
@@ -50,7 +67,7 @@
 	}
 
 	&__box {
-		@include mar (0, 80px, 0, 155px);
+		@include mar (0, 0, 30px, 0);
 	}
 
 	&__form {
@@ -62,13 +79,14 @@
 			@include pseudo;
 			@include pos-abs ($t: 22px, $l: 22px);
 			@include box-size (24px, 19px);
-			@include background (url("../images/email.png"));
+			@include background (url("../images/footer/footer_email.png"));
 		}
 	}
 
 	&__input {
-		@include pad (0, 0, 0, 50px);
+		
 		@include box-size (498px, 62px);
+		text-indent: 65px;
 
 		background-color: $bg-main-color;
 		outline: 0;
@@ -88,14 +106,14 @@
 
 	&__text {
 		@include font ($fs: 1rem, $lh: 2.5em, $ls: -0.02em, $text-trans: uppercase, $fw: 800);
-		@include mar (0, 30px, 0, 0);
+		@include mar (0, 44px, 0, 0);
 		color: $text-footer-color;
 		position: relative;
 
 		&::before {
 			@include pseudo;
-			@include pos-abs ($b: 7px, $l: -7px);
-			@include background (url("../images/arrow_footer.png"));
+			@include pos-abs ($b: 7px, $l: -62px);
+			@include background (url("../images/footer/footer_arrow.png"));
 			@include box-size (48px, 42px);
 		}
 	}
@@ -120,7 +138,7 @@
 	&__link {
 		background-color: #f2662f;
 		@include box-size (53px, 55px);
-		@include pos-fix ($b: 80px, $r: 80px);
+		@include pos-fix ($b: 50px, $r: 120px);
 		z-index: 100;
 		@include background (url(../images/footer/footer_arrow__up.png));
 		background-size: 14px 25px;
@@ -134,69 +152,11 @@
 		}
 	}
 
-	@media only screen and (max-width: 1440px) {
-		&__logo {
-			@include mar (54px, 0, 74px, 55px);
-		}
-
-		&__info {
-			@include mar (0, 0, 0, 100px);
-		}
-
-		&__pay {
-			@include mar (0, 0, 0, 100px);
-		}
-
-		&__box {
-			@include mar (0, 80px, 0, 80px);
-		}
-
-		&__inner {
-			@include mar (0, 0, 0, 100px);
-		}
-
-		&__input {
-			@include box-size ($w: 400px);
-		}
+	@media only screen and (max-width: 1520px) {
+		
 	}
 
-	@media only screen and (max-width: 1368px) {
-		&__top {
-			@include pad (65px, 106px, 93px, 106px);
-		}
-
-		&__wrapper {
-			@include flex ($jc: center, $ai: center, $fw: wrap, $fd: column);
-		}
-
-		&__logo {
-			@include mar (0, 30px, 80px, 0);
-		}
-
-		&__wrap {
-			@include flex ($jc: space-between);
-			@include mar (0, 0, 60px, 0);
-			@include box-size ($w: 60%);
-		}
-
-		&__info {
-			@include mar (0, 0, 0, 0);
-		}
-
-		&__title {
-			@include mar (0, 0, 42px, 0);
-		}
-
-		&__box {
-			@include mar (0, 90px, 0, 0);
-		}
-
-		&__text {
-			@include mar (0, 23px, 0, 0);
-		}
-	}
-
-	@media only screen and (max-width: 992px) {}
+	
 
 	@media only screen and (max-width: 768px) {
 		&__top {
