--- a/src/assets/scss/layout/_testimonials.scss
+++ b/src/assets/scss/layout/_testimonials.scss
@@ -5,9 +5,10 @@
 
 	&::after {
 		@include pseudo;
-		@include pos-abs ($t: -86px, $r: 56px);
+		@include pos-abs ($t: -80px, $r: 60px);
 		@include box-size (410px, 301px);
 		@include background (url("../images/testimonials/testimonials_dots.png"));
+
 		@media only screen and (max-width: 1440px) {
 			display: none;
 		}
@@ -16,41 +17,46 @@
 	&__inner {
 		@include mar (0, auto, 0, auto);
 		@include pad (116px, 0, 80px, 0);
-		}
+	}
 
 	&__title {
-		@include mar (0, 0, 140px, 0);
+		@include mar (0, 0, 130px, 0);
 		text-align: center;
 
 		&--big {
 			text-transform: uppercase;
+			color: $text-cards-color;
 		}
 	}
 
 	&__box {
 		@include flex (center, center);
-		@include mar (0, auto, 105px, auto);
+		@include mar (0, auto, 120px, auto);
 		position: relative;
-		
+
 		&::after {
 			@include pseudo ('Sarah A');
-			@include pos-abs ($t: 7px, $l: 43%);
-			@include font ($fs: 12.5rem, $lh: 0.2em, $ls: -0.02em,$fw: 800);
+			@include pos-abs ($t: 15px, $l: 41%);
+			@include font ($fs: 12.5rem, $lh: 0.2em, $ls: -0.02em, $fw: 800);
 			@include transform (translateX(-50%));
 			opacity: 0.6;
 			color: #521905;
+
 			@media only screen and (max-width: 1440px) {
 				display: none;
 			}
-			}
-			
+		}
+
 	}
 
 	&__textbox {
 		@include flex (center, center, wrap, column);
-		@include mar (0, 50px, 0, 0);
+		@include mar (35px, 50px, 0, 0);
+		max-width: 460px;
 
-		max-width: 470px;
+		@media only screen and (max-width: 768px) {
+			@include mar (80px, 0, 0, 0);
+		}
 	}
 
 	&__quote {
@@ -59,6 +65,10 @@
 		text-align: center;
 
 		z-index: 1;
+
+		@media only screen and (max-width: 768px) {
+			@include mar (0, 0, 0, 0);
+		}
 	}
 
 	&__cite {
@@ -86,70 +96,7 @@
 
 		&:first-child {
 			@include mar (0, 100px, 0, 0);
-			}
-	}
-
-	
-
-	@media only screen and (max-width: 768px) {
-		
-
-		&__title {
-			margin-bottom: 6rem;
-			/* 96px */
-		}
-
-		&__box {
-			flex-direction: column-reverse;
-
-			max-width: 740px;
-			/* 740px */
-
-			margin: 0 auto 104px;
-			/*0 auto 104px */
-		}
-
-		&__textbox {
-			padding-top: 0;
-			margin-top: 90px;
-			/* 90px */
-			margin-right: 0;
-
-			max-width: 452px;
-			/* 452px */
-		}
-
-		&__cite {
-			line-height: 3.95em;
 		}
 	}
 
-	@media only screen and (max-width: 360px) {
-		&__inner {
-			padding: 116px 0 112px;
-			/* 116px 0 112px */
-
-			position: relative;
-
-			
-		}
-
-		&__title {
-			margin-bottom: 65px;
-			/* 65px */
-		}
-
-		&__box {
-			margin: 0 auto 80px;
-			/*0 auto 80px */
-		}
-
-		&__textbox {
-			margin-top: 50px;
-			/* 50px */
-
-			max-width: 338px;
-			/* 338px */
-		}
-	}
 }
