--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -2,24 +2,24 @@
 	&__list {
 		@include flex ($jc: center, $ai: center, $fw: wrap);
 
-		@media only screen and (max-width: 1368px) {
-			@include flex (space-between, center, wrap, column);
-			@include box-size ($h: 800px);
-		}
+		// @media only screen and (max-width: 1368px) {
+		// 	@include flex (space-between, center, wrap, column);
+		// 	@include box-size ($h: 800px);
+		// }
 
-		@media only screen and (max-width: 360px) {
-			@include flex (space-between, center, wrap, column);
-			@include box-size ($h: 300px);
-		}
+		// @media only screen and (max-width: 360px) {
+		// 	@include flex (space-between, center, wrap, column);
+		// 	@include box-size ($h: 300px);
+		// }
 
 	}
 
 	&__item+&__item {
 		@include mar (0, 0, 0, 32px);
 
-		@media only screen and (max-width: 1368px) {
-			@include mar (0, 0, 0, 0);
-		}
+		// @media only screen and (max-width: 1368px) {
+		// 	@include mar (0, 0, 0, 0);
+		// }
 	}
 		&__item:hover {
 			@include transition (all, .2s, ease-in-out);
@@ -30,9 +30,9 @@
 			@include font (1rem, 2.5em, -0.02em, uppercase, 700);
 			position: relative;
 
-			@media only screen and (max-width: 360px) {
-				@include font ($fs: 1.25rem);
-			}
+			// @media only screen and (max-width: 360px) {
+			// 	@include font ($fs: 1.25rem);
+			// }
 
 			&::after {
 				@include pseudo;
