--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -83,8 +83,11 @@
 	}
 
 	&__input {
-
-		@include box-size (498px, 62px);
+		max-width: 498px;
+		width: 100%;
+		height: 62px;
+		outline: 0;
+		max-width: 498px;
 		text-indent: 65px;
 
 		background-color: $bg-main-color;
