fixed bags in normalise

--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -38,9 +38,9 @@ body {
  }
 
 /* проблема переполнения */
-* {
-	outline: solid 1px red;
-} 
+// * {
+// 	outline: solid 1px red;
+// } 
 
 .container {
 	max-width: 1740px;
